--- a/reverse_search.html
+++ b/reverse_search.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Hexa search</title>
+    <title>Hexa reverse search</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
@@ -45,25 +45,33 @@
 <body style="background-color:#FAFAFA">
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="#">Search <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="reverse_search.html">Reverse search</a>
-          </div>
+            <div class="navbar-nav">
+                <a class="nav-item nav-link" href="search.html">Search</a>
+                <a class="nav-item nav-link active" href="#">Reverse search <span class="sr-only">(current)</span></a>
+            </div>
         </div>
-      </nav>
+    </nav>
 
     <div class="container">
         <img src="img/partial_logo.png" class="mx-auto d-block" style="padding-top: 0%; padding-bottom: 0%">
         <div class="sticky-top" style="background-color: #FAFAFA;">
             <img src="img/name.png" class="mx-auto d-block">
-            <div class="d-flex row justify-content-center">
-                <form class="form-inline col-12">
-                    <div class="form-group mx-auto mb-2 col-11">
+            <div class="d-flex justify-content-center">
+                <form class="form col-12">
+                    <div class="form-group mx-auto mb-2 row">
                         <input type="text" class="form-control col-12 form-control-lg" id="inputPassword2"
-                            placeholder="Position name">
+                            placeholder="Main skills (separated with commas)">
                     </div>
-                    <button type="button" class="btn mb-2 btn-lg col-1" style="background-color:#7f94a3; color: white"
-                        onclick="javascript:callAjax(); return false">Search</button>
+                    <div class="form-group mx-auto mb-2 row">
+                        <input type="text" class="form-control col-12 form-control-lg" id="inputPassword2"
+                            placeholder="Additional skills (separated with commas)">
+                    </div>
+
+                    <div class="row">
+                        <button type="button" class="btn mb-2 btn-lg mx-auto"
+                            style="background-color:#7f94a3; color: white"
+                            onclick="javascript:callAjax(); return false">Search</button>
+                    </div>
                 </form>
             </div>
         </div>
