--- a/search.html
+++ b/search.html
@@ -45,12 +45,12 @@
 <body style="background-color:#FAFAFA">
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="#">Search <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="reverse_search.html">Reverse search</a>
-          </div>
+            <div class="navbar-nav">
+                <a class="nav-item nav-link active" href="#">Search <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="reverse_search.html">Reverse search</a>
+            </div>
         </div>
-      </nav>
+    </nav>
 
     <div class="container">
         <img src="img/partial_logo.png" class="mx-auto d-block" style="padding-top: 0%; padding-bottom: 0%">
@@ -59,7 +59,7 @@
             <div class="d-flex row justify-content-center">
                 <form class="form-inline col-12">
                     <div class="form-group mx-auto mb-2 col-11">
-                        <input type="text" class="form-control col-12 form-control-lg" id="inputPassword2"
+                        <input type="text" class="form-control col-12 form-control-lg" id="positionName"
                             placeholder="Position name">
                     </div>
                     <button type="button" class="btn mb-2 btn-lg col-1" style="background-color:#7f94a3; color: white"
@@ -94,7 +94,7 @@
         $.ajax({
             url: "http://127.0.0.1:5000/search",
             data: {
-                test: "asdf"
+                text: $('#positionName').val()
             },
             success: function (result) {
                 console.log(result);
