--- a/reverse_search.html
+++ b/reverse_search.html
@@ -43,7 +43,7 @@
 <!-- #e1b794 #7f94a3 #e3e3e3-->
 
 <body style="background-color:#FAFAFA">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top" style="position: fixed; width: 100%; top: 0;">
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-item nav-link" href="search.html">Search</a>
