--- a/search.html
+++ b/search.html
@@ -94,19 +94,21 @@
         $.ajax({
             url: "http://127.0.0.1:5000/search",
             data: {
-                text: $('#positionName').val()
+                text: $('#positionName').val(),
+                limit: 10
             },
             success: function (result) {
                 console.log(result);
-                addRow(result);
+                var result_arr = JSON.parse(result);
+                result_arr.forEach(element => {
+                    addRow(element);
+                });
             }
         });
     };
 
-    function addRow(row) {
-        var parsedRow = JSON.parse(row);
-
-        var crafted = craftRow(parsedRow.name, parsedRow.age);
+    function addRow(parsedRow) {
+        var crafted = craftRow(parsedRow.skill, parsedRow.percentage);
         $("#spinner").remove();
 
         $("#mainTable").fadeIn(1000);
