--- a/reverse_search.html
+++ b/reverse_search.html
@@ -37,13 +37,16 @@
         .spinner-border {
             color: #e3e3e3;
         }
+        .navbar {
+            z-index: 1021;
+        }
     </style>
 </head>
 
 <!-- #e1b794 #7f94a3 #e3e3e3-->
 
 <body style="background-color:#FAFAFA">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top" style="position: fixed; width: 100%; top: 0;">
+    <nav class="navbar navbar-expand-lg navbar-light sticky-top col-4" style="width: 100%; top: 0;">
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-item nav-link" href="search.html">Search</a>
