--- a/search.html
+++ b/search.html
@@ -12,6 +12,7 @@
         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
+    <script src="js/func.js"></script>
     <style>
         html,
         body {
@@ -42,6 +43,11 @@
         .navbar {
             z-index: 1021;
         }
+
+        .floatingNav {
+            border-radius: 2px;
+            box-shadow: 0px 3px 0px #999;
+        }
     </style>
 </head>
 
@@ -59,7 +65,7 @@
 
     <div class="container">
         <img src="img/partial_logo.png" class="mx-auto d-block" style="padding-top: 0%; padding-bottom: 0%">
-        <div class="sticky-top" style="background-color: #FAFAFA;">
+        <div id="topBar" class="sticky-top pb-4" style="background-color: #FAFAFA;">
             <img src="img/name.png" class="mx-auto d-block">
             <div class="d-flex row justify-content-center">
                 <form class="form-inline col-12">
@@ -78,8 +84,11 @@
             </div>
         </div>
         <div class="d-flex row mt-5 col-8 mx-auto">
-            <canvas id="barChart"
-                style="padding-bottom: 15px; height: 370px; aspect-ratio: 4/3; margin-top: 5px;"></canvas>
+            <div id="barChartContainer">
+                <canvas id="barChart"
+                    style="padding-bottom: 15px; height: 370px; aspect-ratio: 4/3; margin-top: 5px;"></canvas>
+            </div>
+
             <table id="mainTable" class="table" style="background-color: white;">
                 <tbody>
                     <tr></tr>
@@ -104,7 +113,7 @@
         resposive: true
     };
     let colorMap = {
-        0: "#e3e3e3",
+        0: "#a3a3a3",
         20: "#7f94a3",
         40: "#788AA3",
         60: "#e1b794",
@@ -115,16 +124,23 @@
 
     var filled = false;
 
-    $(document).ready(function () {
-        console.log("ready!");
+    $(document).ready(onReady);
+    $(window).scroll(function () {
+        if ($(window).scrollTop() > 10) {
+            $('#topBar').addClass('shadow-sm');
+        } else {
+            $('#topBar').removeClass('shadow-sm');
+        }
     });
-
+    
     function callAjax() {
         if (filled) {
             $("#chartContainer").fadeOut(300);
 
             $("#mainTable").fadeOut(300);
-            $("#mainTable").html("<tr></tr>");
+            $("#mainTable").html('<tr></tr>');
+            $("#barChartContainer").html('<canvas id="barChart" style = "padding-bottom: 15px; height: 370px; aspect-ratio: 4/3; margin-top: 5px;" ></canvas>');
+
             $("#mainTable").fadeIn(1000);
         }
 
@@ -136,7 +152,7 @@
             url: "http://127.0.0.1:5000/search",
             data: {
                 text: $('#positionName').val(),
-                limit: 10
+                limit: 30
             },
             success: function (result) {
                 if (result == "\"\"") {
@@ -192,59 +208,6 @@
 
         $('#mainTable tr:last').after(crafted);
     }
-
-    function craftRow(skill, value) {
-        let color = colorMap[20]
-        for (let j = 0; j < colorThres.length; j++) {
-            if (colorThres[j] > value) {
-                break
-            }
-            else {
-                color = colorMap[colorThres[j]]
-            }
-        }
-        row = `<tr>
-                <td align="left">${skill}</td>
-                <td align="center">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-10 mt-1">
-                                <div class="progress">
-                                    <div class="progress-bar" role="progressbar"
-                                        style="width: ${value}%; background-color: ${color};" aria-valuenow="${value}"
-                                        aria-valuemin="0" aria-valuemax="100">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-1" style="font-family: sans-serif bold">
-                                ${value}%
-                            </div>
-                        </div>
-                    </div>
-                </td>
-            </tr>`
-        return row;
-    }
-
-    function notFound() {
-        row = `<tr>
-                <td align="left">No results found</td>
-                </tr>`
-        $("#spinner").remove();
-
-        $("#mainTable").fadeIn(1000);
-
-        $('#mainTable tr:last').after(row);
-
-    }
-
-    $('form input').keydown(function (e) {
-        if (e.keyCode == 13) {
-            e.preventDefault();
-            callAjax();
-            return false;
-        }
-    });
 </script>
 
 </html>
