--- a/search.html
+++ b/search.html
@@ -46,7 +46,7 @@
 
         .floatingNav {
             border-radius: 2px;
-            box-shadow: 0px 3px 0px #999;
+            box-shadow: 0px 6px 4px -4px #999;
         }
     </style>
 </head>
@@ -126,13 +126,14 @@
 
     $(document).ready(onReady);
     $(window).scroll(function () {
-        if ($(window).scrollTop() > 10) {
-            $('#topBar').addClass('shadow-sm');
+        console.log($(window).scrollTop());
+        if ($(window).scrollTop() > 400) {
+            $('#topBar').addClass('floatingNav');
         } else {
-            $('#topBar').removeClass('shadow-sm');
+            $('#topBar').removeClass('floatingNav');
         }
     });
-    
+
     function callAjax() {
         if (filled) {
             $("#chartContainer").fadeOut(300);
@@ -152,7 +153,7 @@
             url: "http://127.0.0.1:5000/search",
             data: {
                 text: $('#positionName').val(),
-                limit: 30
+                limit: 20
             },
             success: function (result) {
                 if (result == "\"\"") {
