--- a/search.html
+++ b/search.html
@@ -87,15 +87,19 @@
             <div id="barChartContainer">
                 <canvas id="barChart"
                     style="padding-bottom: 15px; height: 370px; aspect-ratio: 4/3; margin-top: 5px;"></canvas>
-            </div>
+                <div style="width: 100px; height: 100px; float: left; position: relative; transform: translate(18.1em,-9.5em)">
+                    <div onload="javascript:callCenterUpdate()" id="totalNum"
+                        style="width: 100%; height: 40px; position: absolute; visibility: hidden; top: 50%; left: 0; margin-top: -20px; line-height:19px; text-align: center; z-index: 999999999999999">
+                        0 </div>
+                </div>
 
-            <table id="mainTable" class="table" style="background-color: white;">
-                <tbody>
-                    <tr></tr>
-                </tbody>
-            </table>
+                <table id="mainTable" class="table" style="background-color: white;">
+                    <tbody>
+                        <tr></tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
-    </div>
 </body>
 
 <script>
@@ -114,8 +118,10 @@
     };
 
     var filled = false;
-
-    $(document).ready(onReady);
+    function oncallCenterUpdate(value) {
+        $("#totalNum").html(value)
+        $("#totalNum").css("visibility", "visible");
+    }
     $(window).scroll(function () {
         if ($(window).scrollTop() > 10) {
             $('#topBar').addClass('shadow-sm');
@@ -123,7 +129,7 @@
             $('#topBar').removeClass('shadow-sm');
         }
     });
-    
+
     function callAjax() {
         if (filled) {
             $("#chartContainer").fadeOut(300);
@@ -157,12 +163,15 @@
 
                     let c = 0
                     let bckColors = []
+                    let sumOffers = 0
                     result_arr.forEach(element => {
                         // addRow(element);
                         datapoints.push(element['percentage'])
                         labelpoints.push(element['skill'])
+                        sumOffers += element['count']
                         c++
                     });
+
 
                     data = {
                         datasets: [{
@@ -173,6 +182,7 @@
                         }],
                         labels: labelpoints
                     }
+                    $(document).ready(oncallCenterUpdate(sumOffers));
 
                     var canvas = document.getElementById("barChart");
                     var ctx = canvas.getContext('2d');
@@ -181,6 +191,7 @@
                         data: data,
                         options: options
                     });
+
                     setTimeout(function () {
                         result_arr.forEach(element => {
                             addRow(element);
