fix: table hovering

--- a/reverse_search.html
+++ b/reverse_search.html
@@ -51,9 +51,8 @@
         }
 
         .floatingNav {
-            width: calc(100vh - 100px);
             border-radius: 2px;
-            box-shadow: 0px 1px 10px #999;
+            box-shadow: 0px 6px 4px -4px #999;
         }
     </style>
 </head>
