--- a/reverse_search.html
+++ b/reverse_search.html
@@ -63,7 +63,7 @@
     <nav class="navbar navbar-expand-lg navbar-light sticky-top col-4" style="width: 100%; top: 0;">
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link" href="search.html">Search</a>
+                <a class="nav-item nav-link" href="index.html">Search</a>
                 <a class="nav-item nav-link active" href="#">Reverse search <span class="sr-only">(current)</span></a>
             </div>
         </div>
@@ -158,7 +158,7 @@
         filled = true;
         $("#spinner").css("visibility", "visible");
         $.ajax({
-            url: "http://127.0.0.1:5000/reverse_search",
+            url: "http://46.101.185.98:5000/reverse_search",
             data: {
                 skills: all_skills
             },
@@ -211,7 +211,7 @@
 
     function onSkillClick(skill) {
         console.log(skill);
-        window.location.replace("search.html?search="+skill);
+        window.location.replace("index.html?search="+skill);
         // fillModal(skill, 'dupa');
         // $("#exampleModalCenter").modal('show');
     }
@@ -221,7 +221,7 @@
         $("#modalTable").html("<tbody><tr id='toDelete'></tr></tbody>");
 
         $.ajax({
-            url: "http://127.0.0.1:5000/stats",
+            url: "http://46.101.185.98:5000/stats",
             data: {
                 text: $('#positionName').val(),
                 limit: 20
